[gd_scene load_steps=7 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://playground.gd" type="Script" id=2]
[ext_resource path="res://scripts/kinematic_tps_controller.gd" type="Script" id=3]

[sub_resource type="PlaneShape" id=1]

plane = Plane( 0, 1, 0, 0 )

[sub_resource type="CapsuleShape" id=3]

radius = 0.6
height = 0.8

[sub_resource type="RayShape" id=4]

length = 0.4

[node name="main" type="Node"]

script/script = ExtResource( 1 )

[node name="playground" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 2 )

[node name="world" type="StaticBody" parent="playground"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="playground/world"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="TestCube" type="TestCube" parent="playground/world"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 9.85, 0, 0, 0, 9.85, 0, 0, 0, 9.85, 0, -10, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="actor" type="KinematicBody" parent="playground" groups=[
"player",
]]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.4, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 5
collide_with/static = true
collide_with/kinematic = true
collide_with/rigid = true
collide_with/character = true
collision/margin = 0.001
script/script = ExtResource( 3 )
__meta__ = {
"__editor_plugin_screen__": "3D"
}
active = true
leg_length = 0.4
body_radius = 0.6
body_height = 0.8
camera_height = 1.7
action_range = 2
action_forward = "char front"
action_backward = "char back"
action_left = "char left"
action_right = "char right"
action_attack = "char fire"
action_jump = "char jump"
action_use = "char use"
action_reload = "char reload"
ACCEL = 2
DEACCEL = 4
FLY_SPEED = 100
FLY_ACCEL = 4
GRAVITY = -9.8
MAX_JUMP_TIMEOUT = 0.2
MAX_ATTACK_TIMEOUT = 0.2
MAX_SLOPE_ANGLE = 40
STAIR_RAYCAST_HEIGHT = 0.75
STAIR_RAYCAST_DISTANCE = 0.58
STAIR_JUMP_SPEED = 5
STAIR_JUMP_TIMEOUT = 0.1
footstep_factor = 0.004
view_sensitivity = 0.3
sfx_library = null
weapon = "res://addons/eco.fps.controller/weapon_base/laser_base"
embed_children = false

[node name="eco_body" type="CollisionShape" parent="playground/actor"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.4, 0 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="leg" type="CollisionShape" parent="playground/actor/eco_body"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = -1

[node name="eco_yaw" type="Spatial" parent="playground/actor"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="camera" type="Camera" parent="playground/actor/eco_yaw"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 1.7, 1 )
projection = 0
fov = 60.0
near = 0.1
far = 1000.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="actionRay" type="RayCast" parent="playground/actor/eco_yaw/camera"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
layer_mask = 1
type_mask = 15

[node name="shoot-point" type="Spatial" parent="playground/actor/eco_yaw/camera"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, -1.37703 )

[node name="weapon-pos" type="Spatial" parent="playground/actor/eco_yaw/camera"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, -0.3 )

[node name="eco_ray" type="RayCast" parent="playground/actor"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0 )
enabled = true
cast_to = Vector3( 0, -0.8, 0 )
layer_mask = 1
type_mask = 15

[node name="eco_stepRay" type="RayCast" parent="playground/actor"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, -0.58 )
enabled = true
cast_to = Vector3( 0, -0.5, 0 )
layer_mask = 1
type_mask = 15

[node name="eco_sfx" type="SamplePlayer" parent="playground/actor"]

config/polyphony = 1
config/samples = null
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="eco_tween" type="Tween" parent="playground/actor"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 0, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0


